--- a/index.html
+++ b/index.html
@@ -281,12 +281,6 @@
     <script>
         let priorityCount = '';
         let demandCount = '';
-        let chanceCount = '';
-        let IntroductionCount = '';
-        let deliveryCount = '';
-        let gelnailsCount = '';
-        let budgetyCount = '';
-        let menuCount = '';
 
         // LIFF初期化
         document.addEventListener('DOMContentLoaded', function () {
@@ -340,108 +334,6 @@
             demandCount = element.innerText;
         }
 
-        function selectchance(element) {
-            // 選択された日時をリセット
-            selectedFullDate = '';
-
-            document.getElementById('onechance').classList.remove('active');
-            document.getElementById('twochance').classList.remove('active');
-            document.getElementById('threechance').classList.remove('active');
-            document.getElementById('fourchance').classList.remove('active');
-            document.getElementById('fivechance').classList.remove('active');
-            document.getElementById('sixchance').classList.remove('active');
-            element.classList.add('active');
-            chanceCount = element.innerText;
-
-            // カレンダーを更新するために取得する日付を渡す
-            fetchAvailability(currentDate);
-        }
-
-        function selectIntroduction(element) {
-            // 選択された日時をリセット
-            selectedFullDate = '';
-
-            document.getElementById('oneIntroduction').classList.remove('active');
-            document.getElementById('twoIntroduction').classList.remove('active');
-            document.getElementById('threeIntroduction').classList.remove('active');
-            document.getElementById('fourIntroduction').classList.remove('active');
-            document.getElementById('fiveIntroduction').classList.remove('active');
-            document.getElementById('sixIntroduction').classList.remove('active');
-            element.classList.add('active');
-            IntroductionCount = element.innerText;
-
-            // カレンダーを更新するために取得する日付を渡す
-            fetchAvailability(currentDate);
-        }
-
-        function selectdelivery(element) {
-            // 選択された日時をリセット
-            selectedFullDate = '';
-
-            document.getElementById('onedelivery').classList.remove('active');
-            document.getElementById('twodelivery').classList.remove('active');
-            document.getElementById('threedelivery').classList.remove('active');
-            document.getElementById('fourdelivery').classList.remove('active');
-            document.getElementById('fivedelivery').classList.remove('active');
-            document.getElementById('sixdelivery').classList.remove('active');
-            element.classList.add('active');
-            deliveryCount = element.innerText;
-
-            // カレンダーを更新するために取得する日付を渡す
-            fetchAvailability(currentDate);
-        }
-
-        function selectgelnails(element) {
-            // 選択された日時をリセット
-            selectedFullDate = '';
-
-            document.getElementById('onegelnails').classList.remove('active');
-            document.getElementById('twogelnails').classList.remove('active');
-            document.getElementById('threegelnails').classList.remove('active');
-            document.getElementById('fourgelnails').classList.remove('active');
-            document.getElementById('fivev').classList.remove('active');
-            document.getElementById('sixgelnails').classList.remove('active');
-            element.classList.add('active');
-            gelnailsCount = element.innerText;
-
-            // カレンダーを更新するために取得する日付を渡す
-            fetchAvailability(currentDate);
-        }
-
-        function selectbudget(element) {
-            // 選択された日時をリセット
-            selectedFullDate = '';
-
-            document.getElementById('onebudget').classList.remove('active');
-            document.getElementById('twobudget').classList.remove('active');
-            document.getElementById('threebudget').classList.remove('active');
-            document.getElementById('fourbudget').classList.remove('active');
-            document.getElementById('fivebudget').classList.remove('active');
-            document.getElementById('sixbudget').classList.remove('active');
-            element.classList.add('active');
-            budgetCount = element.innerText;
-
-            // カレンダーを更新するために取得する日付を渡す
-            fetchAvailability(currentDate);
-        }
-
-        function selectmenu(element) {
-            // 選択された日時をリセット
-            selectedFullDate = '';
-
-            document.getElementById('onemenu').classList.remove('active');
-            document.getElementById('twomenu').classList.remove('active');
-            document.getElementById('threemenu').classList.remove('active');
-            document.getElementById('fourmenu').classList.remove('active');
-            document.getElementById('fivemenu').classList.remove('active');
-            document.getElementById('sixmenu').classList.remove('active');
-            element.classList.add('active');
-            menu = element.innerText;
-
-            // カレンダーを更新するために取得する日付を渡す
-            fetchAvailability(currentDate);
-        }
-
         function submitForm() {
             /* フォームの入力値を取得 */
             const message = document.getElementById('message').value;
@@ -451,12 +343,6 @@
             const message5 = document.getElementById('message5').value;
             priorityCount: priorityCount;
             demandCount: demandCount;
-            chanceCount: chanceCount;
-            IntroductionCount: IntroductionCount;
-            deliveryCount: deliveryCount;
-            gelnailsCount: gelnailsCount;
-            budgetCount: budgetCount;
-            menuCount: menuCount
 
             /* フォームデータをオブジェクトにまとめる */
             const formData = {
@@ -466,13 +352,7 @@
                 message4,
                 message5,
                 priorityCount,
-                demandCount,
-                chanceCount,
-                IntroductionCount,
-                deliveryCount,
-                gelnailsCount,
-                budgetyCount,
-                menuCount
+                demandCount
             };
 
             // LINEトークにメッセージを送信
