--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
 
 <body>
     <div class="container">
-        <h1>アンケート</h1>
+        <h1>アンケート１１</h1>
         <div class="info-text">以下全て入力後<br>【アンケート送信】ボタンを押してください。</div>
         <div class="label">お名前フルネームで教えてください<br>（例　大阪　太郎　オオサカ　タロウ）</div>
         <textarea id="message" rows="1" placeholder="メッセージを入力してください"></textarea> <!-- メッセージ入力フィールド -->
@@ -340,7 +340,6 @@
             const message2 = document.getElementById('message2').value;
             const message3 = document.getElementById('message3').value;
             const message4 = document.getElementById('message4').value;
-            const message5 = document.getElementById('message5').value;
             priorityCount: priorityCount;
             demandCount: demandCount;
 
@@ -350,7 +349,6 @@
                 message2,
                 message3,
                 message4,
-                message5,
                 priorityCount,
                 demandCount
             };
