--- a/index.html
+++ b/index.html
@@ -240,19 +240,19 @@
 
 <body>
     <div class="container">
-        <h1>アンケート１１</h1>
+        <h1>アンケート</h1>
         <div class="info-text">以下全て入力後<br>【アンケート送信】ボタンを押してください。</div>
         <div class="label">お名前フルネームで教えてください<br>（例　大阪　太郎　オオサカ　タロウ）</div>
-        <textarea id="message" rows="1" placeholder="メッセージを入力してください"></textarea> <!-- メッセージ入力フィールド -->
+        <textarea id="message" rows="1" placeholder="入力してください"></textarea> <!-- メッセージ入力フィールド -->
 
         <div class="label">お電話を教えてください。<br>（ハイフン入れてお願いします。）</div>
-        <textarea id="message2" rows="1" placeholder="メッセージを入力してください"></textarea> <!-- メッセージ入力フィールド -->
+        <textarea id="message2" rows="1" placeholder="入力してください"></textarea> <!-- メッセージ入力フィールド -->
 
         <div class="label">ご住所を教えてください。</div>
-        <textarea id="message3" rows="1" placeholder="メッセージを入力してください"></textarea> <!-- メッセージ入力フィールド -->
+        <textarea id="message3" rows="1" placeholder="入力してください"></textarea> <!-- メッセージ入力フィールド -->
 
         <div class="label">生年月日（例　2000年1月1日）</div>
-        <textarea id="message4" rows="1" placeholder="メッセージを入力してください"></textarea> <!-- メッセージ入力フィールド -->
+        <textarea id="message4" rows="1" placeholder="入力してください"></textarea> <!-- メッセージ入力フィールド -->
 
         <div class="label">サロンに求める最も優先度が高いものは何ですか？</div>
         <div class="priority-buttons">
@@ -274,6 +274,62 @@
             <button type="button" id="sixdemand" onclick="selectdemand(this)">特になし</button>
         </div>
 
+        <div class="label">当店を知ったきっかけは何ですか？<br>（ご紹介を選択した方は）</div>
+        <div class="chance-buttons">
+            <button type="button" id="onechance" onclick="selectchance(this)">チラシ</button>
+            <button type="button" id="twochance" onclick="selectchance(this)">ミニモ</button>
+            <button type="button" id="threechance" onclick="selectchance(this)">ホットペッパービューティー</button>
+            <button type="button" id="fourchance" onclick="selectchance(this)">Instagram</button>
+            <button type="button" id="fivechance" onclick="selectchance(this)">通りすがり</button>
+            <button type="button" id="sixchance" onclick="selectchance(this)">ご紹介</button>
+            <button type="button" id="sevenchance" onclick="selectchance(this)">その他</button>
+        </div>
+
+        <div class="label">ご紹介を選択された方はご紹介のお名前を教えてください。</div>
+        <textarea id="message" rows="1" placeholder="入力してください"></textarea> <!-- メッセージ入力フィールド -->
+
+        <div class="label">ご利用店舗を教えてください！</div>
+        <div class="Introduction-buttons">
+            <button type="button" id="oneIntroduction" onclick="selectIntroduction(this)">ゆびノさき</button>
+            <button type="button" id="twoIntroduction" onclick="selectIntroduction(this)">ゆびノさき＋ibarakishi</button>
+            <button type="button" id="threeIntroduction" onclick="selectIntroduction(this)">ゆびノさき＋omotesando</button>
+            <button type="button" id="fourIntroduction" onclick="selectIntroduction(this)">つめノさき</button>
+            <button type="button" id="fiveIntroduction" onclick="selectIntroduction(this)">ひとみノさき</button>
+            <button type="button" id="sixIntroduction" onclick="selectIntroduction(this)">ゆびノさきネイルスクール</button>
+        </div>
+
+        <div class="label">クーポンやお得な情報を配信してもよろしいでしょうか？</div>
+        <div class="delivery-buttons">
+            <button type="button" id="onedelivery" onclick="selectdelivery(this)">はい</button>
+            <button type="button" id="twodelivery" onclick="selectdelivery(this)">いいえ</button>
+        </div>
+
+        <div class="label">ジェルネイルは初めてですか？</div>
+        <div class="gelnails-buttons">
+            <button type="button" id="onegelnails" onclick="selectgelnails(this)">はい</button>
+            <button type="button" id="twogelnails" onclick="selectgelnails(this)">いいえ</button>
+        </div>
+
+        <div class="label">毎月のネイルにご予算はございますか？</div>
+        <div class="budgety-buttons">
+            <button type="button" id="onebudgety" onclick="selectbudgety(this)">したい事ができるなら気にしない</button>
+            <button type="button" id="twobudgety" onclick="selectbudgety(this)">～20,000円まで</button>
+            <button type="button" id="threebudgety" onclick="selectbudgety(this)">～15,000円まで</button>
+            <button type="button" id="fourbudgety" onclick="selectbudgety(this)">～10,000円まで</button>
+            <button type="button" id="fivebudgety" onclick="selectbudgety(this)">～8,000円まで</button>
+        </div>
+
+        <div class="label">気になるネイルメニューはございますか？<br>（複数選択可能です。）</div>
+        <div class="menu-buttons">
+            <button type="button" id="onemenu" onclick="selectmenu(this)">角質ケア</button>
+            <button type="button" id="twomenu" onclick="selectmenu(this)">巻き爪ケア</button>
+            <button type="button" id="threemenu" onclick="selectmenu(this)">マッサージ</button>
+            <button type="button" id="fourmenu" onclick="selectmenu(this)">鼻毛WAX</button>
+            <button type="button" id="fivemenu" onclick="selectmenu(this)">小顔ハイフ</button>
+            <button type="button" id="sixmenu" onclick="selectmenu(this)">部分痩せハイフ</button>
+            <button type="button" id="sevenmenu" onclick="selectmenu(this)">特になし</button>
+        </div>
+
         <button class="submit-button" onclick="submitForm()">アンケート送信</button> <!-- フォーム送信ボタン -->
     </div>
 
@@ -281,6 +337,12 @@
     <script>
         let priorityCount = '';
         let demandCount = '';
+        let chanceCount = '';
+        let IntroductionCount = '';
+        let deliveryCount = '';
+        let gelnailsCount = '';
+        let budgetyCount = '';
+        let menuCount = '';
 
         // LIFF初期化
         document.addEventListener('DOMContentLoaded', function () {
@@ -334,14 +396,91 @@
             demandCount = element.innerText;
         }
 
+        function selectchance(element) {
+
+            document.getElementById('onechance').classList.remove('active');
+            document.getElementById('twochance').classList.remove('active');
+            document.getElementById('threechance').classList.remove('active'); // 修正
+            document.getElementById('fourchance').classList.remove('active');
+            document.getElementById('fivechance').classList.remove('active');
+            document.getElementById('sixchance').classList.remove('active');
+
+            element.classList.add('active');
+            chanceCount = element.innerText;
+        }
+
+        function selectIntroduction(element) {
+
+            document.getElementById('oneIntroduction').classList.remove('active');
+            document.getElementById('twoIntroduction').classList.remove('active');
+            document.getElementById('threeIntroduction').classList.remove('active');
+            document.getElementById('fourIntroduction').classList.remove('active');
+            document.getElementById('fiveIntroduction').classList.remove('active');
+            document.getElementById('sixIntroduction').classList.remove('active');
+
+            element.classList.add('active');
+            IntroductionCount = element.innerText;
+        }
+
+        function selectdelivery(element) {
+
+            document.getElementById('onedelivery').classList.remove('active');
+            document.getElementById('twodelivery').classList.remove('active');
+
+            element.classList.add('active');
+            deliveryCount = element.innerText;
+        }
+
+        function selectgelnails(element) {
+
+            document.getElementById('onegelnails').classList.remove('active');
+            document.getElementById('twogelnails').classList.remove('active');
+
+            element.classList.add('active');
+            gelnailsCount = element.innerText;
+        }
+
+        function selectbudgety(element) {
+
+            document.getElementById('onebudgety').classList.remove('active');
+            document.getElementById('twobudgety').classList.remove('active');
+            document.getElementById('threebudgety').classList.remove('active');
+            document.getElementById('fourbudgety').classList.remove('active');
+            document.getElementById('fivebudgety').classList.remove('active');
+
+            element.classList.add('active');
+            budgetCount = element.innerText;
+        }
+
+        function selectmenu(element) {
+
+            document.getElementById('onemenu').classList.remove('active');
+            document.getElementById('twomenu').classList.remove('active');
+            document.getElementById('threemenu').classList.remove('active');
+            document.getElementById('fourmenu').classList.remove('active');
+            document.getElementById('fivemenu').classList.remove('active');
+            document.getElementById('sixmenu').classList.remove('active');
+            document.getElementById('sevenmenu').classList.remove('active');
+
+            element.classList.add('active');
+            menuCount = element.innerText;
+        }
+
         function submitForm() {
             /* フォームの入力値を取得 */
             const message = document.getElementById('message').value;
             const message2 = document.getElementById('message2').value;
             const message3 = document.getElementById('message3').value;
             const message4 = document.getElementById('message4').value;
+            const message5 = document.getElementById('message5').value;
             priorityCount: priorityCount;
             demandCount: demandCount;
+            chanceCount: chanceCount;
+            IntroductionCount: IntroductionCount;
+            deliveryCount: deliveryCount;
+            gelnailsCount: gelnailsCount;
+            budgetCount: budgetCount;
+            menuCount: menuCount
 
             /* フォームデータをオブジェクトにまとめる */
             const formData = {
@@ -349,14 +488,21 @@
                 message2,
                 message3,
                 message4,
+                message5,
                 priorityCount,
-                demandCount
+                demandCount,
+                chanceCount,
+                IntroductionCount,
+                deliveryCount,
+                gelnailsCount,
+                budgetyCount,
+                menuCount
             };
 
             // LINEトークにメッセージを送信
             liff.sendMessages([{
                 type: 'text',
-                text: `≪アンケート≫\n【名前】：${formData.message}\n【電話番号】：${formData.message2}\n【住所】：${formData.message3}\n【生年月日】：${formData.message4}\n【サロンに求める最も優先度が高いものは何ですか？】：${formData.priorityCount}\n【サロンに求めるものをもう一つ教えてください。】：${formData.demandCount}`
+                text: `≪アンケート≫\n【名前】：${formData.message}\n【電話番号】：${formData.message2}\n【住所】：${formData.message3}\n【生年月日】：${formData.message4}\n【サロンに求める最も優先度が高いものは何ですか？】\n・${formData.priorityCount}\n【サロンに求めるものをもう一つ教えてください。】\n・${formData.demandCount}\n【当店を知ったきっかけは何ですか？】\n・${formData.chanceCount}\n【ご紹介を選択された方はご紹介のお名前を教えてください。】\n・${formData.message5}\n【ご利用店舗を教えてください！】\n・${formData.IntroductionCountCount}\n【クーポンやお得な情報を配信してもよろしいでしょうか？】\n・${formData.deliveryCount}\n【ジェルネイルは初めてですか？】\n・${formData.gelnailsCount}\n【毎月のネイルにご予算はございますか？】\n・${formData.budgetyCount}\n【気になるネイルメニューはございますか？】\n・${formData.menuCount}`
             }]).then(() => {
                 /* メッセージ送信成功時の処理 */
                 alert('ご記入ありがとうございます。同意書が表示されますので、ご確認ください。');
