--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
 
 <body>
     <div class="container">
-        <h1>アンケート</h1>
+        <h1>アンケート２２</h1>
         <div class="info-text">以下全て入力後<br>【アンケート送信】ボタンを押してください。</div>
         <div class="label">お名前フルネームで教えてください<br>（例　大阪　太郎　オオサカ　タロウ）</div>
         <textarea id="message" rows="1" placeholder="入力してください"></textarea> <!-- メッセージ入力フィールド -->
@@ -480,7 +480,7 @@
             deliveryCount: deliveryCount;
             gelnailsCount: gelnailsCount;
             budgetCount: budgetCount;
-            menuCount: menuCount
+            menuCount: menuCount;
 
             /* フォームデータをオブジェクトにまとめる */
             const formData = {
