--- a/index.html
+++ b/index.html
@@ -291,8 +291,8 @@
         <div class="label">ご利用店舗を教えてください！</div>
         <div class="Introduction-buttons">
             <button type="button" id="oneIntroduction" onclick="selectIntroduction(this)">ゆびノさき</button>
-            <button type="button" id="twoIntroduction" onclick="selectIntroduction(this)">ゆびノさき＋ibarakishi</button>
-            <button type="button" id="threeIntroduction" onclick="selectIntroduction(this)">ゆびノさき＋omotesando</button>
+            <button type="button" id="twoIntroduction" onclick="selectIntroduction(this)">ゆびノさき+ibarakishi</button>
+            <button type="button" id="threeIntroduction" onclick="selectIntroduction(this)">ゆびノさき+omotesando</button>
             <button type="button" id="fourIntroduction" onclick="selectIntroduction(this)">つめノさき</button>
             <button type="button" id="fiveIntroduction" onclick="selectIntroduction(this)">ひとみノさき</button>
             <button type="button" id="sixIntroduction" onclick="selectIntroduction(this)">ゆびノさきネイルスクール</button>
