--- a/index.html
+++ b/index.html
@@ -291,8 +291,8 @@
         <div class="label">ご利用店舗を教えてください！</div>
         <div class="Introduction-buttons">
             <button type="button" id="oneIntroduction" onclick="selectIntroduction(this)">ゆびノさき</button>
-            <button type="button" id="twoIntroduction" onclick="selectIntroduction(this)">ゆびノさき+ibarakishi</button>
-            <button type="button" id="threeIntroduction" onclick="selectIntroduction(this)">ゆびノさき+omotesando</button>
+            <button type="button" id="twoIntroduction" onclick="selectIntroduction(this)">ゆびノさき＋ibarakishi</button>
+            <button type="button" id="threeIntroduction" onclick="selectIntroduction(this)">ゆびノさき＋omotesando</button>
             <button type="button" id="fourIntroduction" onclick="selectIntroduction(this)">つめノさき</button>
             <button type="button" id="fiveIntroduction" onclick="selectIntroduction(this)">ひとみノさき</button>
             <button type="button" id="sixIntroduction" onclick="selectIntroduction(this)">ゆびノさきネイルスクール</button>
@@ -502,7 +502,7 @@
             // LINEトークにメッセージを送信
             liff.sendMessages([{
                 type: 'text',
-                text: `≪アンケート≫\n【名前】：${formData.message}\n【電話番号】：${formData.message2}\n【住所】：${formData.message3}\n【生年月日】：${formData.message4}\n【サロンに求める最も優先度が高いものは何ですか？】\n・${formData.priorityCount}\n【サロンに求めるものをもう一つ教えてください。】\n・${formData.demandCount}\n【当店を知ったきっかけは何ですか？】\n・${formData.chanceCount}\n【ご紹介を選択された方はご紹介のお名前を教えてください。】\n・${formData.message5}\n【ご利用店舗を教えてください！】\n・${formData.IntroductionCountCount}\n【クーポンやお得な情報を配信してもよろしいでしょうか？】\n・${formData.deliveryCount}\n【ジェルネイルは初めてですか？】\n・${formData.gelnailsCount}\n【毎月のネイルにご予算はございますか？】\n・${formData.budgetyCount}\n【気になるネイルメニューはございますか？】\n・${formData.menuCount}`
+                text: `≪アンケート≫\n【名前】：${formData.message}\n【電話番号】：${formData.message2}\n【住所】：${formData.message3}\n【生年月日】：${formData.message4}\n【サロンに求める最も優先度が高いものは何ですか？】\n・${formData.priorityCount}\n【サロンに求めるものをもう一つ教えてください。】\n・${formData.demandCount}\n【当店を知ったきっかけは何ですか？】\n・${formData.chanceCount}\n【ご紹介を選択された方はご紹介のお名前を教えてください。】\n・${formData.message5}\n【ご利用店舗を教えてください！】\n・${formData.IntroductionCount}\n【クーポンやお得な情報を配信してもよろしいでしょうか？】\n・${formData.deliveryCount}\n【ジェルネイルは初めてですか？】\n・${formData.gelnailsCount}\n【毎月のネイルにご予算はございますか？】\n・${formData.budgetyCount}\n【気になるネイルメニューはございますか？】\n・${formData.menuCount}`
             }]).then(() => {
                 /* メッセージ送信成功時の処理 */
                 alert('ご記入ありがとうございます。同意書が表示されますので、ご確認ください。');
