--- a/index.html
+++ b/index.html
@@ -479,7 +479,7 @@
             IntroductionCount: IntroductionCount;
             deliveryCount: deliveryCount;
             gelnailsCount: gelnailsCount;
-            budgetCount: budgetCount;
+            budgetyCount: budgetyCount;
             menuCount: menuCount;
 
             /* フォームデータをオブジェクトにまとめる */
