--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
 
 <body>
     <div class="container">
-        <h1>アンケート</h1>
+        <h1>ゆびノさき<br>アンケート</h1>
         <div class="info-text">以下全て入力後<br>【アンケート送信】ボタンを押してください。</div>
         <div class="label">お名前フルネームで教えてください<br>（例　大阪　太郎　オオサカ　タロウ）</div>
         <textarea id="message" rows="1" placeholder="入力してください"></textarea> <!-- メッセージ入力フィールド -->
@@ -502,7 +502,7 @@
             // LINEトークにメッセージを送信
             liff.sendMessages([{
                 type: 'text',
-                text: `≪アンケート≫\n【名前】：${formData.message}\n【電話番号】：${formData.message2}\n【住所】：${formData.message3}\n【生年月日】：${formData.message4}\n【サロンに求める最も優先度が高いものは何ですか？】\n・${formData.priorityCount}\n【サロンに求めるものをもう一つ教えてください。】\n・${formData.demandCount}\n【当店を知ったきっかけは何ですか？】\n・${formData.chanceCount}\n【ご紹介を選択された方はご紹介のお名前を教えてください。】\n・${formData.message5}\n【ご利用店舗を教えてください！】\n・${formData.IntroductionCount}\n【クーポンやお得な情報を配信してもよろしいでしょうか？】\n・${formData.deliveryCount}\n【ジェルネイルは初めてですか？】\n・${formData.gelnailsCount}\n【毎月のネイルにご予算はございますか？】\n・${formData.budgetyCount}\n【気になるネイルメニューはございますか？】\n・${formData.menuCount}`
+                text: `≪アンケート≫\n【名前】\n・${formData.message}\n\n【電話番号】\n・${formData.message2}\n\n【住所】\n・${formData.message3}\n\n【生年月日】\n・${formData.message4}\n\n【サロンに求める最も優先度が高いものは何ですか？】\n・${formData.priorityCount}\n\n【サロンに求めるものをもう一つ教えてください。】\n・${formData.demandCount}\n\n【当店を知ったきっかけは何ですか？】\n・${formData.chanceCount}\n\n【ご紹介を選択された方はご紹介のお名前を教えてください。】\n・${formData.message5}\n\n【ご利用店舗を教えてください！】\n・${formData.IntroductionCount}\n\n【クーポンやお得な情報を配信してもよろしいでしょうか？】\n・${formData.deliveryCount}\n\n【ジェルネイルは初めてですか？】\n・${formData.gelnailsCount}\n\n【毎月のネイルにご予算はございますか？】\n・${formData.budgetyCount}\n\n【気になるネイルメニューはございますか？】\n・${formData.menuCount}`
             }]).then(() => {
                 /* メッセージ送信成功時の処理 */
                 alert('ご記入ありがとうございます。同意書が表示されますので、ご確認ください。');
