--- a/index.html
+++ b/index.html
@@ -449,7 +449,7 @@
             document.getElementById('fivebudgety').classList.remove('active');
 
             element.classList.add('active');
-            budgetCount = element.innerText;
+            budgetyCount = element.innerText;
         }
 
         function selectmenu(element) {
